# scoreboard-fiesto

./: README.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
assets/css/: main.css
components/: team-controller.vue  team-info.vue
pages/: configuration.vue  controller.vue  index.vue  splashscreen.vue
plugins/: before-unload.ts  disable-refresh.ts  disable-right-click.ts  firebase.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  rabbitmq.rs  serial.rs  utils.rs
types/: PlayerInfo.d.ts  TeamInfo.d.ts
