[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
dirs = "5.0.1"
lapin = "2.0.0"
serde_json = "1.0"
tokio-amqp = "2.0.0"
futures-util = "0.3.21"
tauri = { version = "1.5.4", features = [
    "window-all",
    "fs-remove-dir",
    "fs-create-dir",
    "fs-remove-file",
    "fs-copy-file",
    "fs-rename-file",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serialport = "4.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
